5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4129/executions/1723_2502.log
== TEST (2019-05-13 17:27:44) 
-- CODE:
n = int(input("Numero de termos:"))

a = 0
b = 12**(1/2)
c = 1
d = 0
s = 2
m = 0

while(a < n):
	pi = b + m
	m = (1/(c*(3**d)))*(-1**s) + m
	c = c + 2
	d = d + 1
	a = a + 1
	print(pi)
	
	
	
-- OUTPUT:
3.4641016151377544
2.4641016151377544
2.3529905040266432
2.330768281804421
2.325477276513416
2.3241055344009327
2.32373142291571
2.3236259042916734
2.323595421133618
2.323586455498896
2.323583781537663
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 17:28:15) 
-- CODE:
n = int(input("Numero de termos:"))

a = 0
b = 12**(1/2)
c = 1
d = 0
s = 2
m = 0

while(a < n):
	pi = b + m
	m = (1/(c*(3**d)))*(-1**s) + m
	c = c + 2
	d = d + 1
	a = a + 1
print(round(pi, 8))
	
	
	
-- EXECUTION TIME:
0.160028
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
2.32358378
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
2.32358263
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
2.3236259
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:28:18) 
-- CODE:
n = int(input("Numero de termos:"))

a = 0
b = 12**(1/2)
c = 1
d = 0
s = 2
m = 0

while(a < n):
	pi = b + m
	m = (1/(c*(3**d)))*(-1**s) + m
	c = c + 2
	d = d + 1
	a = a + 1
print(round(pi, 8))
	
	
	
-- OUTPUT:
2.32358378
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:28:26) 
-- CODE:
n = int(input("Numero de termos:"))

a = 0
b = 12**(1/2)
c = 1
d = 0
s = 2
m = 0

while(a < n):
	pi = b + m
	m = (1/(c*(3**d)))*(-1**s) + m
	c = c + 2
	d = d + 1
	a = a + 1
print(round(pi, 8))
	
	
	
-- OUTPUT:
2.32358378
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:28:46) 
-- CODE:
n = int(input("Numero de termos:"))

a = 0
b = 12**(1/2)
c = 1
d = 0
s = 2
m = 0

while(a < n):
	pi = b * m
	m = (1/(c*(3**d)))*(-1**s) + m
	c = c + 2
	d = d + 1
	a = a + 1
print(round(pi, 8))
	
	
	
-- OUTPUT:
-3.95086967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:28:59) 
-- CODE:
n = int(input("Numero de termos:"))

a = 0
b = 12**(1/2)
c = 1
d = 0
s = 2
m = 0

while(a < n):
	pi = b * m
	m = (1/(c*(3**d)))*(-1**s) + m
	c = c + 2
	d = d + 1
	a = a + 1
print(round(pi, 8))
	
	
	
-- OUTPUT:
-3.95086967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:29:44) 
-- CODE:
n = int(input("Numero de termos:"))

a = 0
b = 12**(1/2)
c = 1
d = 0
s = 2
m = (1/(c*(3**d)))*(-1**s)

while(a < n):
	pi = b * m
	m = (1/(c*(3**d)))*(-1**s) + m
	c = c + 2
	d = d + 1
	a = a + 1
print(round(pi, 8))
	
	
	
-- OUTPUT:
-7.41497128
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:30:02) 
-- CODE:
n = int(input("Numero de termos:"))

a = 0
b = 12**(1/2)
c = 1
d = 0
s = 2
m = (1/(c*(3**d)))*(1**s)

while(a < n):
	pi = b * m
	m = (1/(c*(3**d)))*(-1**s) + m
	c = c + 2
	d = d + 1
	a = a + 1
print(round(pi, 8))
	
	
	
-- OUTPUT:
-0.48676805
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:30:07) 
-- CODE:
n = int(input("Numero de termos:"))

a = 0
b = 12**(1/2)
c = 1
d = 0
s = 2
m = (1/(c*(3**d)))*(1**s)

while(a < n):
	pi = b * m
	m = (1/(c*(3**d)))*(-1**s) + m
	c = c + 2
	d = d + 1
	a = a + 1
print(round(pi, 8))
	
	
	
-- OUTPUT:
-0.48676805
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:33:19) 
-- CODE:
n = int(input("Numero de termos:"))

a = 0
b = 12**(1/2)
c = 1
d = 0
s = 2
m = 1

while(a < n):
	pi = b *(m)
	m = (1/(c*(3**d)))*(-1**s) + m
	c = c + 2
	d = d + 1
	a = a + 1
print(round(pi, 8))
	
	
	
-- OUTPUT:
-0.48676805
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:33:28) 
-- CODE:
n = int(input("Numero de termos:"))

a = 0
b = 12**(1/2)
c = 1
d = 0
s = 2
m = 1

while(a < n):
	pi = b *(m)
	m = (1/(c*(3**d)))*(-1**s) + m
	c = c + 2
	d = d + 1
	a = a + 1
print(round(pi, 8))
	
	
	
-- OUTPUT:
-0.48676805
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:35:07) 
-- CODE:
n = int(input("Numero de termos:"))

a = 0
b = 12**(1/2)
c = 1
d = 0
s = 2
m = 1

while(a < n):
	pi = b *(m)
	m = (1/(c*(3**d)))*(-1**s) + m
	c = c + 2
	d = d + 1
	a = a + 1
	s = s + 1
print(round(pi, 8))
	
	
	
-- OUTPUT:
-0.48676805
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:35:24) 
-- CODE:
n = int(input("Numero de termos:"))

a = 0
b = 12**(1/2)
c = 1
d = 0
s = 2
m = 1

while(a < n):
	pi = b *(m)
	m = (1/(c*(3**d)))*(-1**s) + m
	c = c + 2
	d = d + 1
	a = a + 1
	s = s + 1
	print(round(pi, 8))
	
	
	
-- OUTPUT:
3.46410162
0.0
-0.38490018
-0.46188022
-0.4802088
-0.48496065
-0.48625661
-0.48662214
-0.48672773
-0.48675879
-0.48676805
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:36:10) 
-- CODE:
n = int(input("Numero de termos:"))

a = 0
b = 12**(1/2)
c = 1
d = 0
s = 2
m = 1

while(a < n):
	pi = b *(m)
	m = (1/(c*(3**d)))*(-1**s) 
	c = c + 2
	d = d + 1
	a = a + 1
	s = s + 1
	print(round(pi, 8))
	
	
	
-- OUTPUT:
3.46410162
-3.46410162
-0.38490018
-0.07698004
-0.01832858
-0.00475185
-0.00129596
-0.00036553
-0.0001056
-3.106e-05
-9.26e-06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:36:42) 
-- CODE:
n = int(input("Numero de termos:"))

a = 0
b = 12**(1/2)
c = 1
d = 0
s = 2
m = 1

while(a < n):
	pi = b *(m)
	m = m + (1/(c*(3**d)))*(-1**s) 
	c = c + 2
	d = d + 1
	a = a + 1
	s = s + 1
	print(round(pi, 8))
	
	
	
-- OUTPUT:
3.46410162
0.0
-0.38490018
-0.46188022
-0.4802088
-0.48496065
-0.48625661
-0.48662214
-0.48672773
-0.48675879
-0.48676805
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:38:05) 
-- CODE:
n = int(input("Numero de termos:"))

a = 0
b = 12**(1/2)
c = 1
d = 0
s = 2
m = 1

while(a < n):
	pi = b *(m)
	m =  (1/(c*(3**d)))*(-1**s) 
	c = c + 2
	d = d + 1
	a = a + 1
	s = s + 1
	print(round(pi, 8))
	
	
	
-- OUTPUT:
3.46410162
-3.46410162
-0.38490018
-0.07698004
-0.01832858
-0.00475185
-0.00129596
-0.00036553
-0.0001056
-3.106e-05
-9.26e-06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:38:16) 
-- CODE:
n = int(input("Numero de termos:"))

a = 0
b = 12**(1/2)
c = 1
d = 0
s = 2
m = 1

while(a < n):
	pi = b *(m)
	m =  (1/(c*(3**d)))*(-1**s) 
	c = c + 2
	d = d + 1
	a = a + 1
	s = s + 1
	print(round(pi, 8))
	
	
	
-- OUTPUT:
3.46410162
-3.46410162
-0.38490018
-0.07698004
-0.01832858
-0.00475185
-0.00129596
-0.00036553
-0.0001056
-3.106e-05
-9.26e-06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:39:02) 
-- CODE:
n = int(input("Numero de termos:"))

a = 0
b = 12**(1/2)
c = 1
d = 0
s = 2
m = 1

while(a < n):
	pi = b *(m)
	m =  1
	c = c + 2
	d = d + 1
	a = a + 1
	s = s + 1
	print(round(pi, 8))
	
	
	
-- OUTPUT:
3.46410162
3.46410162
3.46410162
3.46410162
3.46410162
3.46410162
3.46410162
3.46410162
3.46410162
3.46410162
3.46410162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:42:28) 
-- CODE:
n = int(input("Numero de termos:"))

a = 0
b = 12**(1/2) * 1/(1*3**0)
c = 1
d = 0
s = 2
m = 1

while(a < n):
	pi = b * m 
	m =  (1/(c*3**d)) * (-1)**(s) + m
	c = c + 2
	d = d + 1
	a = a + 1
	s = s + 1
	print(round(pi, 8))
	
	
	
-- OUTPUT:
3.46410162
6.92820323
6.54330305
6.62028309
6.60195451
6.60670636
6.6054104
6.60577593
6.60567033
6.60570139
6.60569213
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:43:27) 
-- CODE:
n = int(input("Numero de termos:"))

a = 0
b = 12**(1/2) * 1/(1*3**0)
c = 1
d = 0
s = 1
m = 1

while(a < n):
	pi = b * m 
	m =  (1/(c*3**d)) * (-1)**(s) + m
	c = c + 2
	d = d + 1
	a = a + 1
	s = s + 1
	print(round(pi, 8))
	
	
	
-- OUTPUT:
3.46410162
0.0
0.38490018
0.30792014
0.32624872
0.32149687
0.32279283
0.3224273
0.3225329
0.32250184
0.3225111
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:43:39) 
-- CODE:
n = int(input("Numero de termos:"))

a = 0
b = 12**(1/2) * 1/(1*3**0)
c = 1
d = 0
s = 1
m = 0

while(a < n):
	pi = b * m 
	m =  (1/(c*3**d)) * (-1)**(s) + m
	c = c + 2
	d = d + 1
	a = a + 1
	s = s + 1
	print(round(pi, 8))
	
	
	
-- OUTPUT:
0.0
-3.46410162
-3.07920144
-3.15618147
-3.13785289
-3.14260475
-3.14130879
-3.14167431
-3.14156872
-3.14159977
-3.14159051
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:10:10) 
-- CODE:
n = int(input("Numero de termos:"))

a = 0
b = 12**(1/2) 
c = 1
d = 0
s = 1
m = 0

while(a < n):
	pi = b * m 
	m =  (1/(c*3**d)) * (-1)**(s) + m
	c = c + 2
	d = d + 1
	a = a + 1
	s = s + 1
	print(round(pi, 8))
	
	
	
-- OUTPUT:
0.0
-3.46410162
-3.07920144
-3.15618147
-3.13785289
-3.14260475
-3.14130879
-3.14167431
-3.14156872
-3.14159977
-3.14159051
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:10:47) 
-- CODE:
n = int(input("Numero de termos:"))

a = 0
b = 12**(1/2) 
c = 1
d = 0
s = 2
m = (1/(c*3**d)) * (-1)**(s)

while(a < n):
	pi = b * m 
	m =  (1/(c*3**d)) * (-1)**(s) + m
	c = c + 2
	d = d + 1
	a = a + 1
	s = s + 1
	print(round(pi, 8))
	
	
	
-- OUTPUT:
3.46410162
6.92820323
6.54330305
6.62028309
6.60195451
6.60670636
6.6054104
6.60577593
6.60567033
6.60570139
6.60569213
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:10:50) 
-- CODE:
n = int(input("Numero de termos:"))

a = 0
b = 12**(1/2) 
c = 1
d = 0
s = 2
m = (1/(c*3**d)) * (-1)**(s)

while(a < n):
	pi = b * m 
	m =  (1/(c*3**d)) * (-1)**(s) + m
	c = c + 2
	d = d + 1
	a = a + 1
	s = s + 1
	print(round(pi, 8))
	
	
	
-- OUTPUT:
3.46410162
6.92820323
6.54330305
6.62028309
6.60195451
6.60670636
6.6054104
6.60577593
6.60567033
6.60570139
6.60569213
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:11:42) 
-- CODE:
n = int(input("Numero de termos:"))

a = 0
b = 12**(1/2) 
c = 1
d = 0
s = 2
m = (1/(c*3**d)) * (-1)**(s)

while(a < n):
	pi = b * m 
	m =  (1/(c*3**d)) * (-1)**(s) + m
	c = c + 2
	d = d + 1
	a = a + 1
	s = s + 1
	print(round(M, 8))
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    print(round(M, 8))
NameError: name 'M' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:11:46) 
-- CODE:
n = int(input("Numero de termos:"))

a = 0
b = 12**(1/2) 
c = 1
d = 0
s = 2
m = (1/(c*3**d)) * (-1)**(s)

while(a < n):
	pi = b * m 
	m =  (1/(c*3**d)) * (-1)**(s) + m
	c = c + 2
	d = d + 1
	a = a + 1
	s = s + 1
	print(round(m, 8))
	
	
	
-- OUTPUT:
2.0
1.88888889
1.91111111
1.90582011
1.90719185
1.90681774
1.90692326
1.90689277
1.90690174
1.90689906
1.90689987
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:14:21) 
-- CODE:
n = int(input("Numero de termos:"))

a = 0
b = 12**(1/2) 
c = 1
d = 0
s = 2
m = 0
while(a < n):
	pi = b * ((1/(c*3**d)) * (-1)**(s) + m)
	m =  (1/(c*3**d)) * (-1)**(s) + m
	c = c + 2
	d = d + 1
	a = a + 1
	s = s + 1
	print(round(m, 8))
	
	
	
-- OUTPUT:
1.0
0.88888889
0.91111111
0.90582011
0.90719185
0.90681774
0.90692326
0.90689277
0.90690174
0.90689906
0.90689987
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:14:27) 
-- CODE:
n = int(input("Numero de termos:"))

a = 0
b = 12**(1/2) 
c = 1
d = 0
s = 2
m = 0
while(a < n):
	pi = b * ((1/(c*3**d)) * (-1)**(s) + m)
	m =  (1/(c*3**d)) * (-1)**(s) + m
	c = c + 2
	d = d + 1
	a = a + 1
	s = s + 1
	print(round(pi, 8))
	
	
	
-- OUTPUT:
3.46410162
3.07920144
3.15618147
3.13785289
3.14260475
3.14130879
3.14167431
3.14156872
3.14159977
3.14159051
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:14:51) 
-- CODE:
n = int(input("Numero de termos:"))

a = 0
b = 12**(1/2) 
c = 1
d = 0
s = 2
m = 0
while(a < n):
	pi = b * ((1/(c*3**d)) * (-1)**(s) + m)
	m =  (1/(c*3**d)) * (-1)**(s) + m
	c = c + 2
	d = d + 1
	a = a + 1
	s = s + 1
	print(round(pi, 8))
	
	
	
-- EXECUTION TIME:
0.140739
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.46410162
3.07920144
3.15618147
3.13785289
3.14260475
3.14130879
3.14167431
3.14156872
3.14159977
3.14159051
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.46410162
3.07920144
3.15618147
3.13785289
3.14260475
3.14130879
3.14167431
3.14156872
3.14159977
3.14159051
3.1415933
3.14159245
3.14159272
3.14159263
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.46410162
3.07920144
3.15618147
3.13785289
3.14260475
3.14130879
3.14167431
3.14156872
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:14:57) 
-- CODE:
n = int(input("Numero de termos:"))

a = 0
b = 12**(1/2) 
c = 1
d = 0
s = 2
m = 0
while(a < n):
	pi = b * ((1/(c*3**d)) * (-1)**(s) + m)
	m =  (1/(c*3**d)) * (-1)**(s) + m
	c = c + 2
	d = d + 1
	a = a + 1
	s = s + 1
print(round(pi, 8))
	
	
	
-- EXECUTION TIME:
0.215207
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
